Project KemenagCuti {
  database_type: 'MySQL'
  Note: 'Database schema for Kemenag Cuti Application'
}

Table users {
  id integer [primary key, increment]
  username string [unique]
  role enum('admin', 'pegawai', 'pimpinan') [default: 'pegawai']
  status boolean [default: false]
  image_path string [null]
  password string
  remember_token string [null]
  created_at timestamp
  updated_at timestamp
}

Table pegawais {
  id integer [primary key, increment]
  user_id integer
  is_atasan boolean [default: false]

  // Informasi Pribadi
  nama_lengkap string
  nip string [unique]
  jenis_kelamin enum('laki', 'perempuan')
  tempat_lahir string [null]
  tanggal_lahir date [null]

  // Kepegawaian
  status_kepegawaian enum('PNS', 'PPPK') [default: 'PNS']
  pangkat_golongan string [null]
  jabatan string [null]
  unit_kerja string [null]
  pendidikan string [null]

  // Kontak
  nomor_hp string [null]
  email string [null]

  created_at timestamp
  updated_at timestamp
}

Table surats {
  id integer [primary key, increment]
  pegawai_id integer
  approved_by integer [null, note: 'Pimpinan yang menyetujui/menolak. Nullable.']
  nomor_surat string [unique]
  jenis_surat enum('cuti', 'tugas')
  tanggal_surat date
  perihal string

  status enum('draft', 'diajukan', 'diproses', 'disetujui', 'ditolak') [default: 'draft']
  keterangan text [null]
  ditolak_alasan text [null]

  // Cuti Specific
  jenis_cuti enum('tahunan', 'sakit', 'melahirkan', 'alasan_penting', 'besar') [null]
  tanggal_mulai_cuti date [null]
  tanggal_selesai_cuti date [null]
  keterangan_cuti text [null]
  tembusan text [null]

  // Tugas Specific
  dasar_hukum text [null]
  tujuan_tugas text [null]
  lokasi_tugas string [null]
  tanggal_mulai_tugas date [null]
  tanggal_selesai_tugas date [null]

  created_at timestamp
  updated_at timestamp
}

Table password_reset_tokens {
  username string [primary key]
  token string
  created_at timestamp [null]
}

Table sessions {
  id string [primary key]
  user_id integer [null]
  ip_address string [null]
  user_agent text [null]
  payload longtext
  last_activity integer
}



Ref: pegawais.user_id > users.id [delete: cascade]
Ref: surats.pegawai_id > pegawais.id [delete: cascade]
Ref: surats.approved_by > pegawais.id [delete: set null]
Ref: sessions.user_id > users.id
